build based on 26d7515

--- a/dev/plotly_mathjax.html
+++ b/dev/plotly_mathjax.html
@@ -4,12 +4,12 @@
         <title>Plots.jl</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-		<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+		<script src="https://cdn.plot.ly/plotly-1.54.2.min.js"></script>
     </head>
     <body>
-            <div id="8e3dd9aa-b581-45ff-8ffb-b55b62eedd1e" style="width:600px;height:400px;"></div>
+            <div id="10bec854-864e-4367-81d1-b902cfe7ed8a" style="width:600px;height:400px;"></div>
     <script>
-    PLOT = document.getElementById('8e3dd9aa-b581-45ff-8ffb-b55b62eedd1e');
+    PLOT = document.getElementById('10bec854-864e-4367-81d1-b902cfe7ed8a');
     Plotly.plot(PLOT, [
     {
         "xaxis": "x1",
@@ -180,7 +180,8 @@
     "plot_bgcolor": "rgba(255, 255, 255, 1.000)",
     "showlegend": true,
     "legend": {
-        "tracegroupgap": 0,
+        "yanchor": "auto",
+        "xanchor": "auto",
         "bordercolor": "rgba(0, 0, 0, 1.000)",
         "bgcolor": "rgba(255, 255, 255, 1.000)",
         "font": {
@@ -188,8 +189,11 @@
             "family": "sans-serif",
             "size": 11
         },
+        "tracegroupgap": 0,
         "y": 1.0,
-        "x": 1.0
+        "borderwidth": 1,
+        "traceorder": "normal",
+        "x": 1.02
     },
     "margin": {
         "l": 0,
