build based on 41d8392

--- a/dev/plotly_mathjax.html
+++ b/dev/plotly_mathjax.html
@@ -7,16 +7,16 @@
 		<script src="https://cdn.plot.ly/plotly-1.54.2.min.js"></script>
     </head>
     <body>
-            <div id="2b1d45e8-ac17-4c97-b915-4e9cdc9c66ec" style="width:600px;height:400px;"></div>
+            <div id="0e0a79b4-71c1-49cf-8b8b-7685e17408ff" style="width:600px;height:400px;"></div>
     <script>
-    PLOT = document.getElementById('2b1d45e8-ac17-4c97-b915-4e9cdc9c66ec');
+    PLOT = document.getElementById('0e0a79b4-71c1-49cf-8b8b-7685e17408ff');
     Plotly.plot(PLOT, [
     {
-        "xaxis": "x1",
+        "xaxis": "x",
         "colorbar": {
             "title": ""
         },
-        "yaxis": "y1",
+        "yaxis": "y",
         "x": [
             1,
             2,
@@ -44,11 +44,11 @@
         "type": "scatter"
     },
     {
-        "xaxis": "x1",
+        "xaxis": "x",
         "colorbar": {
             "title": ""
         },
-        "yaxis": "y1",
+        "yaxis": "y",
         "x": [
             1,
             2,
@@ -121,7 +121,7 @@
             "size": 11
         },
         "zerolinecolor": "rgba(0, 0, 0, 1.000)",
-        "anchor": "y1"
+        "anchor": "y"
     },
     "paper_bgcolor": "rgba(255, 255, 255, 1.000)",
     "height": 400,
@@ -172,7 +172,7 @@
             "size": 11
         },
         "zerolinecolor": "rgba(0, 0, 0, 1.000)",
-        "anchor": "x1",
+        "anchor": "x",
         "automargin": true
     },
     "include_mathjax": "cdn",
