--- a/dev/plotly_mathjax.html
+++ b/dev/plotly_mathjax.html
@@ -4,12 +4,13 @@
         <title>Plots.jl</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-		<script src="https://cdn.plot.ly/plotly-1.54.2.min.js"></script>
+		<script src="https://cdn.plot.ly/plotly-1.57.1.min.js"></script>
     </head>
     <body>
-            <div id="b0da678c-638d-46d8-8765-a7b2ef33037a" style="width:600px;height:400px;"></div>
+            <div id="d97d188e-b298-40e9-bf1d-cdd53fbd7d03" style="width:600px;height:400px;"></div>
     <script>
-    PLOT = document.getElementById('b0da678c-638d-46d8-8765-a7b2ef33037a');
+    
+    PLOT = document.getElementById('d97d188e-b298-40e9-bf1d-cdd53fbd7d03');
     Plotly.plot(PLOT, [
     {
         "xaxis": "x",
@@ -86,27 +87,14 @@
             3.0,
             4.0
         ],
-        "visible": true,
-        "ticks": "inside",
         "range": [
             0.91,
             4.09
         ],
         "domain": "auto",
-        "tickmode": "array",
-        "linecolor": "rgba(0, 0, 0, 1.000)",
-        "showgrid": true,
-        "title": "$\\sqrt{(n_\\text{c}(t|{T_\\text{early}}))}$",
         "mirror": false,
         "tickangle": 0,
         "showline": true,
-        "gridcolor": "rgba(0, 0, 0, 0.100)",
-        "titlefont": {
-            "color": "rgba(0, 0, 0, 1.000)",
-            "family": "sans-serif",
-            "size": 15
-        },
-        "tickcolor": "rgb(0, 0, 0)",
         "ticktext": [
             "1",
             "2",
@@ -114,14 +102,27 @@
             "4"
         ],
         "zeroline": false,
-        "type": "-",
         "tickfont": {
             "color": "rgba(0, 0, 0, 1.000)",
             "family": "sans-serif",
             "size": 11
         },
         "zerolinecolor": "rgba(0, 0, 0, 1.000)",
-        "anchor": "y"
+        "anchor": "y",
+        "visible": true,
+        "ticks": "inside",
+        "tickmode": "array",
+        "linecolor": "rgba(0, 0, 0, 1.000)",
+        "showgrid": true,
+        "title": "$\\sqrt{(n_\\text{c}(t|{T_\\text{early}}))}$",
+        "gridcolor": "rgba(0, 0, 0, 0.100)",
+        "titlefont": {
+            "color": "rgba(0, 0, 0, 1.000)",
+            "family": "sans-serif",
+            "size": 15
+        },
+        "tickcolor": "rgb(0, 0, 0)",
+        "type": "-"
     },
     "paper_bgcolor": "rgba(255, 255, 255, 1.000)",
     "height": 400,
@@ -134,8 +135,6 @@
             100000.0,
             150000.0
         ],
-        "visible": true,
-        "ticks": "inside",
         "range": [
             -4799.485,
             164799.985
@@ -144,20 +143,9 @@
             0.07581474190726165,
             0.9901574803149606
         ],
-        "tickmode": "array",
-        "linecolor": "rgba(0, 0, 0, 1.000)",
-        "showgrid": true,
-        "title": "$d, r \\text{ (solar radius)}$",
         "mirror": false,
         "tickangle": 0,
         "showline": true,
-        "gridcolor": "rgba(0, 0, 0, 0.100)",
-        "titlefont": {
-            "color": "rgba(0, 0, 0, 1.000)",
-            "family": "sans-serif",
-            "size": 15
-        },
-        "tickcolor": "rgb(0, 0, 0)",
         "ticktext": [
             "0",
             "50000",
@@ -165,7 +153,6 @@
             "150000"
         ],
         "zeroline": false,
-        "type": "-",
         "tickfont": {
             "color": "rgba(0, 0, 0, 1.000)",
             "family": "sans-serif",
@@ -173,6 +160,20 @@
         },
         "zerolinecolor": "rgba(0, 0, 0, 1.000)",
         "anchor": "x",
+        "visible": true,
+        "ticks": "inside",
+        "tickmode": "array",
+        "linecolor": "rgba(0, 0, 0, 1.000)",
+        "showgrid": true,
+        "title": "$d, r \\text{ (solar radius)}$",
+        "gridcolor": "rgba(0, 0, 0, 0.100)",
+        "titlefont": {
+            "color": "rgba(0, 0, 0, 1.000)",
+            "family": "sans-serif",
+            "size": 15
+        },
+        "tickcolor": "rgb(0, 0, 0)",
+        "type": "-",
         "automargin": true
     },
     "include_mathjax": "cdn",
@@ -184,14 +185,22 @@
         "xanchor": "auto",
         "bordercolor": "rgba(0, 0, 0, 1.000)",
         "bgcolor": "rgba(255, 255, 255, 1.000)",
+        "borderwidth": 1,
+        "tracegroupgap": 0,
+        "y": 1.0,
         "font": {
             "color": "rgba(0, 0, 0, 1.000)",
             "family": "sans-serif",
             "size": 11
         },
-        "tracegroupgap": 0,
-        "y": 1.0,
-        "borderwidth": 1,
+        "title": {
+            "font": {
+                "color": "rgba(0, 0, 0, 1.000)",
+                "family": "sans-serif",
+                "size": 15
+            },
+            "text": ""
+        },
         "traceorder": "normal",
         "x": 1.0
     },
@@ -204,6 +213,7 @@
     "width": 600
 }
 );
+    
     </script>
 
     </body>
