build based on 217d9a4

--- a/dev/plotly_mathjax.html
+++ b/dev/plotly_mathjax.html
@@ -7,10 +7,10 @@
 		<script src="https://cdn.plot.ly/plotly-1.57.1.min.js"></script>
     </head>
     <body>
-            <div id="f2a6e38a-20d1-4aad-a350-792d47f3a3c7" style="width:600px;height:400px;"></div>
+            <div id="f2e0d774-3795-46be-be42-1a611e403f12" style="width:600px;height:400px;"></div>
     <script>
     
-    PLOT = document.getElementById('f2a6e38a-20d1-4aad-a350-792d47f3a3c7');
+        var PLOT = document.getElementById('f2e0d774-3795-46be-be42-1a611e403f12');
     Plotly.plot(PLOT, [
     {
         "xaxis": "x",
@@ -213,6 +213,7 @@
     "width": 600
 }
 );
+
     
     </script>
 
