--- a/dev/plotly_mathjax.html
+++ b/dev/plotly_mathjax.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Plots.jl</title>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-		<script src="https://cdn.plot.ly/plotly-1.57.1.min.js"></script>
-    </head>
-    <body>
-            <div id="40d2c8b0-0d82-4ce5-8031-6babb36ecc80" style="width:600px;height:400px;"></div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+		<script src="https://cdn.plot.ly/plotly-1.57.1.min.js"></script>    <div id="238afcea-077b-4a02-9885-9116d7fbfc70" style="width:600px;height:400px;"></div>
     <script>
     
-        var PLOT = document.getElementById('40d2c8b0-0d82-4ce5-8031-6babb36ecc80');
+        var PLOT = document.getElementById('238afcea-077b-4a02-9885-9116d7fbfc70');
     Plotly.plot(PLOT, [
     {
         "xaxis": "x",
@@ -216,6 +208,3 @@
 
     
     </script>
-
-    </body>
-</html>
