build based on 8d061af

--- a/dev/animations/index.html
+++ b/dev/animations/index.html
@@ -23,14 +23,11 @@ anim = @animate for i ∈ 1:n
     circleplot(x, y, i)
 end
 gif(anim, &quot;anim_fps15.gif&quot;, fps = 15)
-=#
-nothing</code></pre><pre><code class="language-julia hljs"># gif(anim, &quot;anim_fps30.gif&quot;, fps = 30)
-nothing</code></pre><p>The <code>every</code> flag will only save a frame &quot;every N iterations&quot;:</p><pre><code class="language-julia hljs">#=
+=#</code></pre><pre><code class="language-julia hljs"># gif(anim, &quot;anim_fps30.gif&quot;, fps = 30)</code></pre><p>The <code>every</code> flag will only save a frame &quot;every N iterations&quot;:</p><pre><code class="language-julia hljs">#=
 @gif for i ∈ 1:n
     circleplot(x, y, i, line_z = 1:n, cbar = false, framestyle = :zerolines)
 end every 5
-=#
-nothing</code></pre><p>The <code>when</code> flag will only save a frame &quot;when the expression is true&quot;</p><pre><code class="language-julia hljs">n = 400
+=#</code></pre><p>The <code>when</code> flag will only save a frame &quot;when the expression is true&quot;</p><pre><code class="language-julia hljs">n = 400
 t = range(0, 2π, length = n)
 x = 16sin.(t).^3
 y = 13cos.(t) .- 5cos.(2t) .- 2cos.(3t) .- cos.(4t)
@@ -38,5 +35,4 @@ y = 13cos.(t) .- 5cos.(2t) .- 2cos.(3t) .- cos.(4t)
 @gif for i ∈ 1:n
     circleplot(x, y, i, line_z = 1:n, cbar = false, c = :reds, framestyle = :none)
 end when i &gt; 40 &amp;&amp; mod1(i, 10) == 5
-=#
-nothing</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../generated/colorschemes/">« ColorSchemes</a><a class="docs-footer-nextpage" href="../generated/plotthemes/">Themes »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.4 on <span class="colophon-date" title="Wednesday 21 July 2021 22:56">Wednesday 21 July 2021</span>. Using Julia version 1.6.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+=#</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../generated/colorschemes/">« ColorSchemes</a><a class="docs-footer-nextpage" href="../generated/plotthemes/">Themes »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.4 on <span class="colophon-date" title="Thursday 22 July 2021 00:53">Thursday 22 July 2021</span>. Using Julia version 1.6.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
