build based on 8f8bfca

--- a/dev/colorschemes/index.html
+++ b/dev/colorschemes/index.html
@@ -701,12 +701,12 @@ AElFTkSuQmCC
      width="180mm" height="25mm" viewBox="0 0 100 1" stroke="none"
      preserveAspectRatio="none" shape-rendering="crispEdges">
 <defs>
-    <pattern id="pat_1zUiDm" width=".2" height=".2"
+    <pattern id="pat_4ZQG24" width=".2" height=".2"
              patternUnits="userSpaceOnUse" patternTransform="scale(13.889,1)" >
         <path d="M.1,0h.1v.1h-.2v.1h.1z" fill="%23999" opacity=".5" />
     </pattern>
 </defs>
-<rect width="100" height="1" fill="url(%23pat_1zUiDm)" />
+<rect width="100" height="1" fill="url(%23pat_4ZQG24)" />
 <path d="M1,.46V1h-1V.54z" fill="%232E214D" />
 <path d="M0,0h1v1h-1z" fill="%232E214D" fill-opacity="1" />
 <path d="M2,.46V1h-1V.54z" fill="%2331234F" />
@@ -914,12 +914,12 @@ AElFTkSuQmCC
      width="180mm" height="25mm" viewBox="0 0 100 1" stroke="none"
      preserveAspectRatio="none" shape-rendering="crispEdges">
 <defs>
-    <pattern id="pat_1pvkZQ" width=".2" height=".2"
+    <pattern id="pat_M3Y1L" width=".2" height=".2"
              patternUnits="userSpaceOnUse" patternTransform="scale(13.889,1)" >
         <path d="M.1,0h.1v.1h-.2v.1h.1z" fill="%23999" opacity=".5" />
     </pattern>
 </defs>
-<rect width="100" height="1" fill="url(%23pat_1pvkZQ)" />
+<rect width="100" height="1" fill="url(%23pat_M3Y1L)" />
 <path d="M1,.46V1h-1V.54z" fill="%23FFA500" />
 <path d="M0,0h1v1h-1z" fill="%23FFA500" fill-opacity="1" />
 <path d="M2,.46V1h-1V.54z" fill="%23F9A106" />
@@ -1127,12 +1127,12 @@ AElFTkSuQmCC
      width="180mm" height="25mm" viewBox="0 0 100 1" stroke="none"
      preserveAspectRatio="none" shape-rendering="crispEdges">
 <defs>
-    <pattern id="pat_2n6uUN" width=".2" height=".2"
+    <pattern id="pat_zbOLc" width=".2" height=".2"
              patternUnits="userSpaceOnUse" patternTransform="scale(13.889,1)" >
         <path d="M.1,0h.1v.1h-.2v.1h.1z" fill="%23999" opacity=".5" />
     </pattern>
 </defs>
-<rect width="100" height="1" fill="url(%23pat_2n6uUN)" />
+<rect width="100" height="1" fill="url(%23pat_zbOLc)" />
 <path d="M1,.46V1h-1V.54z" fill="%23E8FA5B" />
 <path d="M0,0h1v1h-1z" fill="%23E8FA5B" fill-opacity="1" />
 <path d="M2,.46V1h-1V.54z" fill="%23EAF658" />
@@ -1340,12 +1340,12 @@ AElFTkSuQmCC
      width="180mm" height="25mm" viewBox="0 0 100 1" stroke="none"
      preserveAspectRatio="none" shape-rendering="crispEdges">
 <defs>
-    <pattern id="pat_3bwBId" width=".2" height=".2"
+    <pattern id="pat_1Axqed" width=".2" height=".2"
              patternUnits="userSpaceOnUse" patternTransform="scale(13.889,1)" >
         <path d="M.1,0h.1v.1h-.2v.1h.1z" fill="%23999" opacity=".5" />
     </pattern>
 </defs>
-<rect width="100" height="1" fill="url(%23pat_3bwBId)" />
+<rect width="100" height="1" fill="url(%23pat_1Axqed)" />
 <path d="M1,.46V1h-1V.54z" fill="%23FEEDB0" />
 <path d="M0,0h1v1h-1z" fill="%23FEEDB0" fill-opacity="1" />
 <path d="M2,.46V1h-1V.54z" fill="%23FEEDB0" />
@@ -1553,12 +1553,12 @@ AElFTkSuQmCC
      width="180mm" height="25mm" viewBox="0 0 100 1" stroke="none"
      preserveAspectRatio="none" shape-rendering="crispEdges">
 <defs>
-    <pattern id="pat_3mI3qC" width=".2" height=".2"
+    <pattern id="pat_4ItdCj" width=".2" height=".2"
              patternUnits="userSpaceOnUse" patternTransform="scale(13.889,1)" >
         <path d="M.1,0h.1v.1h-.2v.1h.1z" fill="%23999" opacity=".5" />
     </pattern>
 </defs>
-<rect width="100" height="1" fill="url(%23pat_3mI3qC)" />
+<rect width="100" height="1" fill="url(%23pat_4ItdCj)" />
 <path d="M1,.46V1h-1V.54z" fill="%232F0F3E" />
 <path d="M0,0h1v1h-1z" fill="%232F0F3E" fill-opacity="1" />
 <path d="M2,.46V1h-1V.54z" fill="%232F0F3E" />
@@ -1766,12 +1766,12 @@ AElFTkSuQmCC
      width="180mm" height="25mm" viewBox="0 0 100 1" stroke="none"
      preserveAspectRatio="none" shape-rendering="crispEdges">
 <defs>
-    <pattern id="pat_jYruD" width=".2" height=".2"
+    <pattern id="pat_1Eqcuw" width=".2" height=".2"
              patternUnits="userSpaceOnUse" patternTransform="scale(13.889,1)" >
         <path d="M.1,0h.1v.1h-.2v.1h.1z" fill="%23999" opacity=".5" />
     </pattern>
 </defs>
-<rect width="100" height="1" fill="url(%23pat_jYruD)" />
+<rect width="100" height="1" fill="url(%23pat_1Eqcuw)" />
 <path d="M1,.46V1h-1V.54z" fill="%237F1900" />
 <path d="M0,0h1v1h-1z" fill="%237F1900" fill-opacity="1" />
 <path d="M2,.46V1h-1V.54z" fill="%237F1B01" />
@@ -1979,12 +1979,12 @@ AElFTkSuQmCC
      width="180mm" height="25mm" viewBox="0 0 100 1" stroke="none"
      preserveAspectRatio="none" shape-rendering="crispEdges">
 <defs>
-    <pattern id="pat_2rnlWI" width=".2" height=".2"
+    <pattern id="pat_3shTBI" width=".2" height=".2"
              patternUnits="userSpaceOnUse" patternTransform="scale(13.889,1)" >
         <path d="M.1,0h.1v.1h-.2v.1h.1z" fill="%23999" opacity=".5" />
     </pattern>
 </defs>
-<rect width="100" height="1" fill="url(%23pat_2rnlWI)" />
+<rect width="100" height="1" fill="url(%23pat_3shTBI)" />
 <path d="M1,.46V1h-1V.54z" fill="%237F1900" />
 <path d="M0,0h1v1h-1z" fill="%237F1900" fill-opacity="1" />
 <path d="M2,.46V1h-1V.54z" fill="%237F1900" />
@@ -2185,4 +2185,4 @@ AElFTkSuQmCC
 <path d="M98,0h1v1h-1z" fill="%231A3399" fill-opacity="1" />
 <path d="M100,.46V1h-1V.54z" fill="%231A3399" />
 <path d="M99,0h1v1h-1z" fill="%231A3399" fill-opacity="1" />
-</svg>'/><h1 id="Pre-defined-ColorSchemes"><a class="docs-heading-anchor" href="#Pre-defined-ColorSchemes">Pre-defined ColorSchemes</a><a id="Pre-defined-ColorSchemes-1"></a><a class="docs-heading-anchor-permalink" href="#Pre-defined-ColorSchemes" title="Permalink"></a></h1></article><nav class="docs-footer"><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.5 on <span class="colophon-date" title="Saturday 31 July 2021 19:18">Saturday 31 July 2021</span>. Using Julia version 1.6.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+</svg>'/><h1 id="Pre-defined-ColorSchemes"><a class="docs-heading-anchor" href="#Pre-defined-ColorSchemes">Pre-defined ColorSchemes</a><a id="Pre-defined-ColorSchemes-1"></a><a class="docs-heading-anchor-permalink" href="#Pre-defined-ColorSchemes" title="Permalink"></a></h1></article><nav class="docs-footer"><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.5 on <span class="colophon-date" title="Saturday 31 July 2021 19:34">Saturday 31 July 2021</span>. Using Julia version 1.6.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
