build based on 1c47893

--- a/dev/colorschemes/index.html
+++ b/dev/colorschemes/index.html
@@ -701,12 +701,12 @@ AElFTkSuQmCC
      width="180mm" height="25mm" viewBox="0 0 100 1" stroke="none"
      preserveAspectRatio="none" shape-rendering="crispEdges">
 <defs>
-    <pattern id="pat_8eq3C" width=".2" height=".2"
+    <pattern id="pat_7925z" width=".2" height=".2"
              patternUnits="userSpaceOnUse" patternTransform="scale(13.889,1)" >
         <path d="M.1,0h.1v.1h-.2v.1h.1z" fill="%23999" opacity=".5" />
     </pattern>
 </defs>
-<rect width="100" height="1" fill="url(%23pat_8eq3C)" />
+<rect width="100" height="1" fill="url(%23pat_7925z)" />
 <path d="M1,.46V1h-1V.54z" fill="%232E214D" />
 <path d="M0,0h1v1h-1z" fill="%232E214D" fill-opacity="1" />
 <path d="M2,.46V1h-1V.54z" fill="%2331234F" />
@@ -914,12 +914,12 @@ AElFTkSuQmCC
      width="180mm" height="25mm" viewBox="0 0 100 1" stroke="none"
      preserveAspectRatio="none" shape-rendering="crispEdges">
 <defs>
-    <pattern id="pat_GPiq4" width=".2" height=".2"
+    <pattern id="pat_3GYCp7" width=".2" height=".2"
              patternUnits="userSpaceOnUse" patternTransform="scale(13.889,1)" >
         <path d="M.1,0h.1v.1h-.2v.1h.1z" fill="%23999" opacity=".5" />
     </pattern>
 </defs>
-<rect width="100" height="1" fill="url(%23pat_GPiq4)" />
+<rect width="100" height="1" fill="url(%23pat_3GYCp7)" />
 <path d="M1,.46V1h-1V.54z" fill="%23FFA500" />
 <path d="M0,0h1v1h-1z" fill="%23FFA500" fill-opacity="1" />
 <path d="M2,.46V1h-1V.54z" fill="%23F9A106" />
@@ -1127,12 +1127,12 @@ AElFTkSuQmCC
      width="180mm" height="25mm" viewBox="0 0 100 1" stroke="none"
      preserveAspectRatio="none" shape-rendering="crispEdges">
 <defs>
-    <pattern id="pat_4Vjt0P" width=".2" height=".2"
+    <pattern id="pat_dJNwg" width=".2" height=".2"
              patternUnits="userSpaceOnUse" patternTransform="scale(13.889,1)" >
         <path d="M.1,0h.1v.1h-.2v.1h.1z" fill="%23999" opacity=".5" />
     </pattern>
 </defs>
-<rect width="100" height="1" fill="url(%23pat_4Vjt0P)" />
+<rect width="100" height="1" fill="url(%23pat_dJNwg)" />
 <path d="M1,.46V1h-1V.54z" fill="%23E8FA5B" />
 <path d="M0,0h1v1h-1z" fill="%23E8FA5B" fill-opacity="1" />
 <path d="M2,.46V1h-1V.54z" fill="%23EAF658" />
@@ -1340,12 +1340,12 @@ AElFTkSuQmCC
      width="180mm" height="25mm" viewBox="0 0 100 1" stroke="none"
      preserveAspectRatio="none" shape-rendering="crispEdges">
 <defs>
-    <pattern id="pat_nWe2x" width=".2" height=".2"
+    <pattern id="pat_4SydIs" width=".2" height=".2"
              patternUnits="userSpaceOnUse" patternTransform="scale(13.889,1)" >
         <path d="M.1,0h.1v.1h-.2v.1h.1z" fill="%23999" opacity=".5" />
     </pattern>
 </defs>
-<rect width="100" height="1" fill="url(%23pat_nWe2x)" />
+<rect width="100" height="1" fill="url(%23pat_4SydIs)" />
 <path d="M1,.46V1h-1V.54z" fill="%23FEEDB0" />
 <path d="M0,0h1v1h-1z" fill="%23FEEDB0" fill-opacity="1" />
 <path d="M2,.46V1h-1V.54z" fill="%23FEEDB0" />
@@ -1553,12 +1553,12 @@ AElFTkSuQmCC
      width="180mm" height="25mm" viewBox="0 0 100 1" stroke="none"
      preserveAspectRatio="none" shape-rendering="crispEdges">
 <defs>
-    <pattern id="pat_4UfAqO" width=".2" height=".2"
+    <pattern id="pat_2PjolY" width=".2" height=".2"
              patternUnits="userSpaceOnUse" patternTransform="scale(13.889,1)" >
         <path d="M.1,0h.1v.1h-.2v.1h.1z" fill="%23999" opacity=".5" />
     </pattern>
 </defs>
-<rect width="100" height="1" fill="url(%23pat_4UfAqO)" />
+<rect width="100" height="1" fill="url(%23pat_2PjolY)" />
 <path d="M1,.46V1h-1V.54z" fill="%232F0F3E" />
 <path d="M0,0h1v1h-1z" fill="%232F0F3E" fill-opacity="1" />
 <path d="M2,.46V1h-1V.54z" fill="%232F0F3E" />
@@ -1766,12 +1766,12 @@ AElFTkSuQmCC
      width="180mm" height="25mm" viewBox="0 0 100 1" stroke="none"
      preserveAspectRatio="none" shape-rendering="crispEdges">
 <defs>
-    <pattern id="pat_3k71VK" width=".2" height=".2"
+    <pattern id="pat_22SDJc" width=".2" height=".2"
              patternUnits="userSpaceOnUse" patternTransform="scale(13.889,1)" >
         <path d="M.1,0h.1v.1h-.2v.1h.1z" fill="%23999" opacity=".5" />
     </pattern>
 </defs>
-<rect width="100" height="1" fill="url(%23pat_3k71VK)" />
+<rect width="100" height="1" fill="url(%23pat_22SDJc)" />
 <path d="M1,.46V1h-1V.54z" fill="%237F1900" />
 <path d="M0,0h1v1h-1z" fill="%237F1900" fill-opacity="1" />
 <path d="M2,.46V1h-1V.54z" fill="%237F1B01" />
@@ -1979,12 +1979,12 @@ AElFTkSuQmCC
      width="180mm" height="25mm" viewBox="0 0 100 1" stroke="none"
      preserveAspectRatio="none" shape-rendering="crispEdges">
 <defs>
-    <pattern id="pat_30CF48" width=".2" height=".2"
+    <pattern id="pat_1cGHt" width=".2" height=".2"
              patternUnits="userSpaceOnUse" patternTransform="scale(13.889,1)" >
         <path d="M.1,0h.1v.1h-.2v.1h.1z" fill="%23999" opacity=".5" />
     </pattern>
 </defs>
-<rect width="100" height="1" fill="url(%23pat_30CF48)" />
+<rect width="100" height="1" fill="url(%23pat_1cGHt)" />
 <path d="M1,.46V1h-1V.54z" fill="%237F1900" />
 <path d="M0,0h1v1h-1z" fill="%237F1900" fill-opacity="1" />
 <path d="M2,.46V1h-1V.54z" fill="%237F1900" />
@@ -2185,4 +2185,4 @@ AElFTkSuQmCC
 <path d="M98,0h1v1h-1z" fill="%231A3399" fill-opacity="1" />
 <path d="M100,.46V1h-1V.54z" fill="%231A3399" />
 <path d="M99,0h1v1h-1z" fill="%231A3399" fill-opacity="1" />
-</svg>'/><h1 id="Pre-defined-ColorSchemes"><a class="docs-heading-anchor" href="#Pre-defined-ColorSchemes">Pre-defined ColorSchemes</a><a id="Pre-defined-ColorSchemes-1"></a><a class="docs-heading-anchor-permalink" href="#Pre-defined-ColorSchemes" title="Permalink"></a></h1></article><nav class="docs-footer"><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.6 on <span class="colophon-date" title="Wednesday 15 September 2021 10:54">Wednesday 15 September 2021</span>. Using Julia version 1.6.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+</svg>'/><h1 id="Pre-defined-ColorSchemes"><a class="docs-heading-anchor" href="#Pre-defined-ColorSchemes">Pre-defined ColorSchemes</a><a id="Pre-defined-ColorSchemes-1"></a><a class="docs-heading-anchor-permalink" href="#Pre-defined-ColorSchemes" title="Permalink"></a></h1></article><nav class="docs-footer"><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.6 on <span class="colophon-date" title="Friday 17 September 2021 06:07">Friday 17 September 2021</span>. Using Julia version 1.6.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
